force-app/main/default/objects/Imposto__c/Imposto__c.object-meta.xml
<CustomObject>
    <label>Imposto</label>
    <nameField>
        <label>Imposto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impostos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>