force-app/main/default/objects/Imposto__c/fields/Centro_Distribuicao__c.field-meta.xml
<CustomField>
    <fullName>Centro_Distribuicao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>Centro_Distribuicao__c</referenceTo>
    <relationshipLabel>Impostos</relationshipLabel>
    <relationshipName>Impostos</relationshipName>
    <type>Lookup</type>
</CustomField>