force-app/main/default/objects/Imposto__c/fields/Imposto_sobre_custo__c.field-meta.xml
<CustomField>
    <fullName>Imposto_sobre_custo__c</fullName>
    <label>Imposto sobre custo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>