force-app/main/default/objects/Imposto__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Impostos</relationshipLabel>
    <relationshipName>Impostos</relationshipName>
    <type>Lookup</type>
</CustomField>